Fix get started spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,7 +34,7 @@
    font-size: 24px;
    padding: 0px 10px;
  }
- .navbar-btn {
+ .navbar-btn, .start {
    margin: 10px 10px;
    padding: 7px 15px;
    border: 2px solid #5BC0ED;
@@ -57,11 +57,4 @@
     background-color: white;
     outline: none;
   }
- }
- #start {
-   border: none;
-   border-radius: 0px;
-   &:focus {
-     outline: none;
-   }
  }
