--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,3 +3,6 @@
   padding-top: 20%;
   text-align: center;
 }
+.headline {
+  margin-bottom: 30px;
+}
